--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,14 @@ node_js:
   - "5.1"
   - "4.4"
 install:
+  - npm config set spin=false
   - npm install -g coveralls
   - npm install
-
+env:
+  - ISTANBUL_REPORTERS=lcov,text-summary
 script:
   - npm test
-  - coveralls < ./coverage/lcov.info || true # if coveralls doesn't have it covered
+  - coveralls < ./lcov.info || true # if coveralls doesn't have it covered
 
 # Allow Travis tests to run in containers.
 sudo: false
