Temporary uses my typings until patches will be merged and published

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "lodash.uniq": "^4.3.0",
     "node-uuid": "^1.4.7",
-    "graphql-typings": "^0.0.1-beta-2"
+    "graphql-typings": "git://github.com/DxCx/graphql-typings.git#tmp-pkg"
   },
   "peerDependencies": {
     "graphql": "^0.5.0 || ^0.6.0 || ^0.7.0"
@@ -55,14 +55,14 @@
     "babel-preset-stage-0": "^6.5.0",
     "body-parser": "^1.15.0",
     "chai": "^3.5.0",
-    "dataloader": "^1.1.0",
+    "dataloader": "git://github.com/DxCx/dataloader.git#typings-tmp-pkg",
     "delete-empty": "^0.1.3",
     "dts-bundle": "^0.5.0",
     "express": "^4.13.4",
     "express3": "0.0.0",
     "fs": "0.0.2",
     "graphql": "^0.7.0",
-    "graphql-typings": "^0.0.1-beta-2",
+    "graphql-typings": "git://github.com/DxCx/graphql-typings.git#tmp-pkg",
     "istanbul": "0.4.3",
     "lodash": "^4.10.0",
     "mocha": "^3.0.1",
@@ -78,7 +78,7 @@
     "tslint-loader": "^2.1.5",
     "typescript": "^2.0.0",
     "webpack": "2.1.0-beta.22",
-    "webpack-fail-plugin": "^1.0.5",
+    "webpack-fail-plugin": "git://github.com/DxCx/webpack-fail-plugin.git#patch-1",
     "webpack-istanbul-plugin": "0.0.5",
     "webpack-node-externals": "^1.3.3"
   }
