--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "awesome-typescript-loader": "^2.2.4",
     "babel-core": "^6.14.0",
     "babel-loader": "6.2.5",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
     "body-parser": "^1.15.0",
