--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: node_js
 node_js:
-  - "6.2"
-  - "5.1"
   - "4.4"
+  - "5.1"
+  - "6.2"
+  - "6.5"
 install:
   - npm config set spin=false
+  - npm install -g npm@3
   - npm install -g coveralls
   - npm install
 env:
