--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "posttest": "npm run lint",
     "lint": "tslint ./src/**/*.ts",
     "watch": "tsc -w",
-    "testonly": "mocha --compilers js:babel-core/register --reporter spec --full-trace ./dist/test/tests.js",
-    "coverage": "babel-node ./node_modules/istanbul/lib/cli.js cover _mocha -- --full-trace ./dist/test/tests.js",
+    "testonly": "mocha --reporter spec --full-trace ./dist/test/tests.js",
+    "coverage": "babel-node ./node_modules/istanbul/lib/cli.js cover _mocha -- --reporter dot --full-trace ./dist/test/tests.js",
     "postcoverage": "remap-istanbul --input coverage/coverage.json --type lcovonly --output coverage/lcov.info",
     "prepublish": "npm run compile"
   },
@@ -63,6 +63,7 @@
     "babel-core": "^6.14.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.5.0",
     "body-parser": "^1.15.0",
     "chai": "^3.5.0",
     "dataloader": "git://github.com/DxCx/dataloader.git#typings-tmp-pkg",
@@ -83,6 +84,7 @@
     "source-map-support": "^0.4.2",
     "supertest": "^2.0.0",
     "supertest-as-promised": "^4.0.0",
+    "ts-node": "^1.3.0",
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5",
     "typescript": "2.0.0"
