--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-tools-rxjs",
-  "version": "0.7.2",
+  "version": "0.7.2-patch.1",
   "description": "A set of useful GraphQL tools",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -11,6 +11,7 @@
     "test": "test"
   },
   "scripts": {
+    "precompile": "rm -Rf dist/",
     "compile": "tsc",
     "typings": "typings install",
     "pretest": "npm run compile",
@@ -49,7 +50,7 @@
     "node-uuid": "^1.4.7"
   },
   "peerDependencies": {
-    "graphql-rxjs": "^0.5.0 || ^0.6.0 || ^0.7.0 || ^0.7.0-patch.2"
+    "graphql-rxjs": "^0.8.1"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.32",
@@ -68,7 +69,7 @@
     "express": "^4.13.4",
     "express3": "0.0.0",
     "fs": "0.0.2",
-    "graphql-rxjs": "^0.7.0-patch.2",
+    "graphql-rxjs": "^0.8.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.1",
     "multer": "^1.0.3",
@@ -82,6 +83,6 @@
     "supertest-as-promised": "^4.0.0",
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5",
-    "typescript": "2.0.3"
+    "typescript": "2.1.5"
   }
 }
